Water Quality Project explanation
